--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -20,12 +20,13 @@
   }
 
    &:before {
-    content: "\F002";
+    content: "\f002";
     position: absolute;
     top: 35px;
     left: 60px;
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
+    font-family: FontAwesome;
+    font-weight: normal;
+    font-style: normal;
     font-size: 2.6em;
     opacity: 0.4;
   }
